@@ -7,33 +7,18 @@ package de.uni_hamburg.corpora.validation;
 
 import de.uni_hamburg.corpora.CorpusData;
 import de.uni_hamburg.corpora.CorpusFunction;
-import de.uni_hamburg.corpora.Report;
-import java.io.IOException;
-import java.util.Collection;
-import java.util.logging.Level;
-import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
-import org.jdom.JDOMException;
-import org.xml.sax.SAXException;
-import de.uni_hamburg.corpora.Corpus;
-import de.uni_hamburg.corpora.CorpusData;
-import de.uni_hamburg.corpora.CorpusFunction;
 import de.uni_hamburg.corpora.CorpusIO;
 import de.uni_hamburg.corpora.Report;
 import de.uni_hamburg.corpora.utilities.TypeConverter;
 import de.uni_hamburg.corpora.utilities.XSLTransformer;
-import de.uni_hamburg.corpora.visualization.ListHTML;
-import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
-import java.util.Scanner;
+import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.TransformerConfigurationException;
 import javax.xml.transform.TransformerException;
+import javax.xml.xpath.XPathExpressionException;
 import org.exmaralda.partitureditor.jexmaralda.JexmaraldaException;
 import org.jdom.JDOMException;
 import org.xml.sax.SAXException;
@@ -60,51 +45,14 @@ public class ComaOverviewGeneration extends Checker implements CorpusFunction {
         
             // perform XSLT transformation
             String result = xt.transform(cd.toSaveableString(), xsl);
-            Path path = Paths.get(cd.getURL().toURI()); 
-            Path pathwithoutfilename = path.getParent();
-            URI overviewuri = pathwithoutfilename.toUri();
-            URL overviewurl1 = overviewuri.toURL();
-            System.out.println(overviewurl1);
-            //TODO systemindependent!!
-            URL overviewurl = new URL(overviewurl1, "coma_overview.html");
+            //get locatino to save new result
+            URL overviewurl = new URL(cd.getParentURL(), "coma_overview.html");
             CorpusIO cio = new CorpusIO();
+            //save it
             cio.write(result, overviewurl);
-            
+            //everything worked
             r.addCorrect(COMA_OVERVIEW, cd, "created html overview at " + overviewurl);
             
-            
-//            //read lines and add to Report
-//            Scanner scanner = new Scanner(result);
-//            
-//            int i = 1;
-//            while (scanner.hasNextLine()) {
-//                String line = scanner.nextLine();
-//                
-//                //split line by ;
-//                String[] lineParts = line.split(";");
-//                
-//                switch (lineParts[0].toUpperCase()) {
-//                    case "WARNING":
-//                        r.addWarning("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    case "CRITICAL":
-//                        r.addCritical("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    case "NOTE":                    
-//                        r.addNote("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    case "MISSING": 
-//                        r.addMissing("XSLTChecker", cd.getURL().getFile() + ": " + lineParts[1]);
-//                        break;
-//                    default:
-//                        r.addCritical("XSLTChecker", "(Unrecognized report type) "+ cd.getURL().getFile() + ": " + lineParts[1]);
-//                }
-//                
-//                i++;
-//            }
-//
-//            scanner.close();
-
 
         } catch (TransformerConfigurationException ex) {
             r.addException(ex, COMA_OVERVIEW, cd, "Transformer configuration error");
@@ -114,8 +62,12 @@ public class ComaOverviewGeneration extends Checker implements CorpusFunction {
             r.addException(ex, COMA_OVERVIEW, cd, "Malformed URL error");
         } catch (IOException ex) {
             r.addException(ex, COMA_OVERVIEW, cd, "Unknown input/output error");
-        } catch (URISyntaxException ex) {
-            r.addException(ex, COMA_OVERVIEW, cd, "Unknown URI syntax error");
+        } catch (ParserConfigurationException ex) {
+            r.addException(ex, COMA_OVERVIEW, cd, "Unknown Parser error");
+        } catch (SAXException ex) {
+            r.addException(ex, COMA_OVERVIEW, cd, "Unknown XML error");
+        } catch (XPathExpressionException ex) {
+            r.addException(ex, COMA_OVERVIEW, cd, "Unknown XPath error");
         }
         
         return r;
